# models-boltz

./: .gitattributes  .gitignore  AGENTS.md  README.md  STANDARDS.md  biosim-index.yaml
.github/workflows/: ci.yml
examples/: README.md  build_boltz2_bsilab.py  build_boltz2_bsispace.py  run_example.py
examples/boltz2-explicit-msa/: config.yaml  demo.yaml  expected-outputs.md
examples/boltz2-explicit-msa/assets/: seq1.a3m
examples/boltz2-minimal/: config.yaml  demo.yaml  expected-outputs.md
examples/boltz2-short-no-msa/: config.yaml  expected-outputs.md
examples/boltz2-wiring/: .biosimulant-project.json  lab.yaml  space.yaml
examples/boltz2-wiring/models/boltz-boltz2-affinity-predictor/: README.md  model.yaml
labs/boltz-boltz2-affinity-predictor/: .biosimulant-project.json  README.md  lab.yaml  wiring-layout.json
labs/boltz-boltz2-affinity-predictor/model/: README.md  model.yaml
labs/boltz-boltz2-affinity-predictor/model/src/: boltz2_affinity_predictor.py
labs/boltz-boltz2-affinity-predictor/model/tests/: test_boltz2_affinity_predictor.py
labs/boltz-boltz2-affinity-predictor/tests/: test_boltz-boltz2-affinity-predictor_multi_model_lab.py
models/boltz-boltz2-affinity-predictor/: README.md  model.yaml
models/boltz-boltz2-affinity-predictor/src/: boltz2_affinity_predictor.py
models/boltz-boltz2-affinity-predictor/tests/: test_boltz2_affinity_predictor.py
scripts/: check_public_boundary.sh  validate_manifests.py
templates/model-pack/: README.md  pyproject.toml
templates/model-pack/examples/: demo.yaml
(+12 files in other folders)
