[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biosim-boltz-pack-template"
version = "0.1.0"
description = "Template package for Boltz-family biosim modules"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Biosimulant Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "biosim",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "biosim[ui]",
]

[project.urls]
Homepage = "https://github.com/BioSimulant/models-boltz"
Documentation = "https://github.com/BioSimulant/models-boltz#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/my_pack"]
